# TASO

./: CMakeLists.txt  INSTALL.md  README.md  config.cmake  graph_subst.pb  validate_axioms.py  verify.py
bert_graphs/: bert_sequential_nw.onnx  bert_subst_nw.onnx  bert_xflow_nw.onnx
cpp_examples/: bert.h  dnn.cc  example_utils.h  nasnet_a.h  nasrnn.h  resnet50.h  resnext50.h
docker/: Dockerfile  install_taso.sh  run_docker.sh
examples/: batched_resnet.py  bert.py  enas.py  enas_arcs.txt  figure10.py  figure9.py  inceptionv3.py  nasnet_a.py  nasrnn.py  resnet50.py  resnext50.py  test_onnx.py
include/taso/: cuda_helper.h  dnnl_helper.h  ops.h  substitution.h
include/xflow/: cuda_helper.h  ops.h
python/: nasrnn.py  resnet50.py  resnext50.py  sample.py  setup.py  test.py
python/taso/: __init__.py
python/taso/_cython/: CCore.pxd  core.pyx
python/xflow/: __init__.py
python/xflow/_cython/: CCore.pxd  core.pyx
src/core/: activation.cc  batchnorm.cc  broadcast_add.cc  cast.cc  concat.cc  constant.cc  conv2d.cc  element.cc  elementwise_unary.cc  enlarge.cc  fuse_conv_batchnorm.cc  fuse_conv_batchnorm_alpha_var.cc  fuse_conv_batchnorm_bias.cc  graph_to_trt.cc  matmul.cc  merge_gconv.cc  mul.cc  noop.cc  ops.cc  pad.cc  pool2d.cc  reduce.cc  reshape.cc  resize.cc  rules.pb.cc  shape.cc  slice.cc  split.cc  squeeze.cc  substitution.cc  substitution.h  topk.cc  transpose.cc  unsqueeze.cc  where.cc
src/cudnn/: activation_cudnn.cu  batchnorm_cudnn.cu  batchnorm_kernel.cu  broadcast_add_kernel.cu  cast_kernel.cu  concat_cudnn.cu  constant_kernel.cu  conv2d_cudnn.cu  conv2d_kernel.cu  cuda_helper.cu  element_cudnn.cu  element_kernel.cu  elementwise_unary_kernel.cu  enlarge_cudnn.cu  fuse_conv_batchnorm_alpha_var_kernel.cu  fuse_conv_batchnorm_bias_kernel.cu  fuse_conv_batchnorm_kernel.cu  matmul_cudnn.cu  matmul_kernel.cu  merge_gconv_cudnn.cu  merge_gconv_kernel.cu  mul_cudnn.cu  ops_cudnn.cu  pad_kernel.cu  pool2d_cudnn.cu  pool2d_kernel.cu  reduce_kernel.cu  reshape_cudnn.cu  resize_kernel.cu  shape_kernel.cu  slice_kernel.cu  squeeze_cudnn.cu  topk_kernel.cu  transpose_cudnn.cu  transpose_kernel.cu  unsqueeze_cudnn.cu  where_kernel.cu
src/dnnl/: activation_mkl.cc  batchnorm_mkl.cc  broadcast_add_mkl.cc  cast_mkl.cc  concat_mkl.cc  constant_mkl.cc  conv2d_mkl.cc  dnnl_helper.cc  element_mkl.cc  elementwise_unary_mkl.cc  enlarge_mkl.cc  fuse_conv_batchnorm_alpha_var_mkl.cc  fuse_conv_batchnorm_bias_mkl.cc  fuse_conv_batchnorm_mkl.cc  matmul_mkl.cc  merge_gconv_mkl.cc  mul_mkl.cc  ops_mkl.cc  pad_mkl.cc  pool2d_mkl.cc  reduce_mkl.cc  reshape_mkl.cc  resize_mkl.cc  shape_mkl.cc  slice_mkl.cc  squeeze_mkl.cc  topk_mkl.cc  transpose_mkl.cc  unsqueeze_mkl.cc  where_mkl.cc
src/generator/: compile.sh  generator.cc  rules.pb.h
tensorflow_py/: bert.py  nasnet_a.py  nasrnn.py  resnet50.py  resnext50.py  shared_functions.py
